Changed icons, added move function, restricted size of url item container

--- a/TagSystemViewer/Resources/Brushes.axaml
+++ b/TagSystemViewer/Resources/Brushes.axaml
@@ -33,8 +33,5 @@
     <SolidColorBrush x:Key="LaunchBrush">Orange</SolidColorBrush>
     <SolidColorBrush x:Key="LaunchPressBrush">Yellow</SolidColorBrush>
     
-    <SolidColorBrush x:Key="ForegroundSelectedTagBrush"></SolidColorBrush>
-    <SolidColorBrush x:Key="ForegroundSelectedItemBrush"></SolidColorBrush>
-    <SolidColorBrush x:Key=""></SolidColorBrush>
-
-</ResourceDictionary>
+    <SolidColorBrush x:Key="PinkyBrush">HotPink</SolidColorBrush>
+  </ResourceDictionary>
