--- a/TagSystemViewer/Styles/SplitterStyle.axaml
+++ b/TagSystemViewer/Styles/SplitterStyle.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style Selector="GridSplitter">
-        <Setter Property="Background" Value="{StaticResource LaunchPressBrush}"/>
+        <Setter Property="Background" Value="{StaticResource PinkyBrush}"/>
         <Setter Property="MaxWidth" Value="{StaticResource ThickWidthDouble}"/>
     </Style>
 </Styles>
